tests/invalid/bad-hcl-3.workflow
# Invalid file, because a `}` is missing

action "foo" {

# ASSERT {
#   "result":       "failure",
#   "numActions":   0,
#   "numWorkflows": 0,
#   "errors":[
#     { "severity": "FATAL", "message": "object expected closing rbrace got: eof" }
#   ]
# }
